# GeoCAD

./: App.cpp  CMakeLists.txt
.cache/clangd/index/: App.cpp.F4475998BD5CF0D5.idx
CMake/: GenerateQrc.cmake
UI/qml/: main.qml
src/: App.cpp
src/UI/cpp/: Line.h  MainWindow.cpp  MainWindow.h  Vertex.h  VulkanItem.cpp  VulkanItem.h  VulkanRenderNode.cpp  VulkanRenderNode.h
src/UI/cpp/Geometry/: Geometry.h  Line.h  Vertex.h
src/UI/cpp/ModeHandlers/: AddingLineMode.cpp  AddingLineMode.h  AddingLineWithAngleMode.cpp  AddingLineWithAngleMode.h  IModeHandler.h  ModeHandlers.h  MoveHandler.cpp  MoveHandler.h  ViewportContext.h
src/UI/qml/: main.qml
src/UI/shaders/: frag.spvasm  frag_circle.frag  frag_dash_line.frag  vertex.spvasm  vertex.vert  vertex_circle.vert
